--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="./style.css" />
   <title>Frontend Mentor | Loopstudios landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,41 +16,92 @@
   </style>
 </head>
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <section class="sec1">
+    <section>
+      <div class="logo"> <img src="./images/logo.svg" /> </div>
+      <div>
+        <ul>
+          <li><a>About</a></li>
+          <li><a>Careers</a></li>
+          <li><a>Events</a></li>
+          <li><a>Products</a></li>
+          <li><a>Support</a></li>
+        </ul>
+      </div>
+    </section>
+    <section>
+      <fieldset class="immersive">
+          IMMERSIVE EXPERIENCES THAT DELIVER
+      </fieldset>
+    </section>
+  </section>
 
-  Immersive experiences that deliver
+  <section>
+    <section class="mid">
+      <div class="lead">
+        <img id="lead" src="images/desktop/image-interactive.jpg"/>
+      </div>
+      <div>
+        <div class="description">
+          <p class="title_dex">The leader in interactive VR</p>
+          <p>
+            Founded in 2011, Loopstudios has been producing world-class virtual reality 
+            projects for some of the best companies around the globe. Our award-winning 
+            creations have transformed businesses through digital experiences that bind 
+            to their brand.
+          </p>
+        </div>
+      </div>
+    </section>
+  
+    <section class="creations">
+      <div class="c">
+        <div>Our Creations</div>
+        <div class="b"><button>SEE ALL</button></div>
+      </div>
+    
+      <div class="myimages">
+        <img id="deep" src="images/desktop/image-deep-earth.jpg" />
+        <img id="deep" src="images/desktop/image-night-arcade.jpg" />
+        <img id="deep" src="images/desktop/image-soccer-team.jpg" />
+        <img id="deep" src="images/desktop/image-grid.jpg" />
+        <img id="deep" src="images/desktop/image-from-above.jpg" />
+        <img id="deep" src="images/desktop/image-pocket-borealis.jpg" />
+        <img id="deep" src="images/desktop/image-curiosity.jpg" />
+        <img id="deep" src="images/desktop/image-fisheye.jpg" />
 
-  The leader in interactive VR
+      </div>
+    </section>
+  </section>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+  <footer>
+    <div class="foot">
+      <div> 
+        <img src="./images/logo.svg" />
+      </div>
+      <div class="social">
+        <a> <img src="./images/icon-facebook.svg" /> </a>
+        <a> <img src="./images/icon-twitter.svg" /> </a>
+        <a> <img src="./images/icon-pinterest.svg" /> </a>
+        <a> <img src="./images/icon-instagram.svg" /> </a>
+      </div>
+    </div>
+    <div class="foot">
+      <div> 
+        <ul>
+          <li><a>About</a></li>
+          <li><a>Careers</a></li>
+          <li><a>Events</a></li>
+          <li><a>Products</a></li>
+          <li><a>Support</a></li>
+        </ul>
+      </div>
+      <div class="l">
+        © 2021 Loopstudios. All rights reserved.
+      </div>
+    </div>
 
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
+  </footer>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
