--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <section>
         <div class="logo"> <img src="./images/logo.svg" /> </div>
         <div>
-          <p class="nav_btn"><a id="navbtn">=</a></p>
+          <p class="nav_btn"><a id="navbtn">&#9776;</a></p>
           <ul id="nav_list">
             <li><a>About</a></li>
             <li><a>Careers</a></li>
