--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="./style.css" />
-  <link rel="stylesheet" type="text/css" href="./style2.css" />
+  <link rel="stylesheet" media="screen and (max-width: 1049px)" type="text/css" href="./style.css" />
+  <link rel="stylesheet" media="screen and (min-width: 1050px)" type="text/css" href="./style2.css" />
   <title>Frontend Mentor | Loopstudios landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -17,107 +17,178 @@
   </style>
 </head>
 <body>
-  <section class="intro">
-    <section class="sec1">
 
-      <section>
-        <div class="logo"> <img src="./images/logo.svg" /> </div>
-        <div>
-          <p class="nav_btn"><a id="navbtn">&#9776;</a></p>
-          <ul id="nav_list">
-            <li><a>About</a></li>
-            <li><a>Careers</a></li>
-            <li><a>Events</a></li>
-            <li><a>Products</a></li>
-            <li><a>Support</a></li>
-          </ul>
-        </div>
-      </section>
-  
-      <section>
-        <fieldset class="immersive">
-            IMMERSIVE EXPERIENCES THAT DELIVER
-        </fieldset>
-      </section>
-  
-    </section>
-  </section>
-
-  <section class="mid1">
-    <section class="mid">
-
-      <section>
-        <div class="lead">
-          <div></div>
-        </div>
-        <div>
-          <div class="description">
-            <p class="title_dex">The leader in interactive VR</p>
-            <p>
-              Founded in 2011, Loopstudios has been producing world-class virtual reality 
-              projects for some of the best companies around the globe. Our award-winning 
-              creations have transformed businesses through digital experiences that bind 
-              to their brand.
-            </p>
-          </div>
-        </div>
-      </section>
-    
-      <section class="creations">
-        <div class="c">
-          <div>Our Creations</div>
-          <div class="b"><button>SEE ALL</button></div>
-        </div>
-      
-        <div id="add_images" class="myimages">
-          <div class="tim1"><div id="im" class="deep"></div></div>
-          <div class="tim2"><div id="im" class="arcade"></div></div>
-          <div class="tim3"><div id="im" class="soccer"></div></div>
-          <div class="tim4"><div id="im" class="thegrid"></div></div>
-          <div class="tim5"><div id="im" class="above"></div></div>
-          <div class="tim6"><div id="im" class="borealis"></div></div>
-          <div class="tim7"><div id="im" class="curiosity"></div></div>
-          <div class="tim8"><div id="im" class="fisheye"></div></div>
-        </div>
-      </section>
-
-    </section>
-  </section>
-
-  <footer>
-    <div class="foot">
-      <div> 
-        <img src="./images/logo.svg" />
+  <div class="intro">
+    <picture>
+      <source srcset="images/mobile/image-hero.jpg" media="(max-width:800px)">
+      <img class="hero_image_holder" src="images/desktop/image-hero.jpg" alt="hero" />
+    </picture>
+    <div class="nav">
+      <div class="logo">
+        <img src="images/logo.svg" alt="logo" />
       </div>
-      <div class="social">
-        <a> <img src="./images/icon-facebook.svg" /> </a>
-        <a> <img src="./images/icon-twitter.svg" /> </a>
-        <a> <img src="./images/icon-pinterest.svg" /> </a>
-        <a> <img src="./images/icon-instagram.svg" /> </a>
-      </div>
-    </div>
-    <div class="foot">
-      <div> 
-        <ul>
-          <li><a>About</a></li>
-          <li><a>Careers</a></li>
-          <li><a>Events</a></li>
-          <li><a>Products</a></li>
-          <li><a>Support</a></li>
+      <div class="nav_section">
+        <div class="nav_icon" onclick="make_X(this)">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+        <ul class="nav_list">
+          <li class="nav_item"><a href="" class="nav_link"> ABOUT </a></li>
+          <li class="nav_item"><a href="" class="nav_link"> CAREERS </a></li>
+          <li class="nav_item"><a href="" class="nav_link"> EVENTS </a></li>
+          <li class="nav_item"><a href="" class="nav_link"> PRODUCTS </a></li>
+          <li class="nav_item"><a href="" class="nav_link"> SUPPORT </a></li>
         </ul>
       </div>
-      <div class="l">
-        © 2021 Loopstudios. All rights reserved.
+    </div>
+    <div class="main_txt">
+      <p> IMMERSIVE EXPERIENCES THAT DELIVER </p>
+    </div>
+
+  </div>
+
+  <div class="mid">
+
+    <div class="lead">
+      <div class="lead_img">
+        <picture>
+          <source srcset="images/mobile/image-interactive.jpg" media="(max-width: 800px)">
+          <img class="hero_image_holder" src="images/desktop/image-interactive.jpg" alt="logo" />
+        </picture>
+      </div>
+      <div class="lead_txt">
+        <h1> THE LEADER IN INTERACTIVE VR </h1>
+        <p> Founded in 2011, Loopstudios has been producing world-class 
+          virtual reality projects for some of the best companies around the glob.
+          Our award-winning creations have transformed businesses through 
+          digital experiences that bind to their brand.
+        </p>
       </div>
     </div>
 
+    <div class="creations">
+
+      <div class="creations_header">
+        <p> OUR CREATIONS </p>
+      </div>
+
+      <div class="creation_post">
+        <div class="creation_image">
+          <div><p>DEEP</p><p>EARTH</p></div>
+          <picture>
+            <source srcset="images/mobile/image-deep-earth.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-deep-earth.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>NIGHT</p><p>ARCADE</p></div>
+          <picture>
+            <source srcset="images/mobile/image-night-arcade.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-night-arcade.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>SOCCER</p><p>TEAM VR</p></div>
+          <picture>
+            <source srcset="images/mobile/image-soccer-team.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-soccer-team.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>THE</p><p>GRID</p></div>
+          <picture>
+            <source srcset="images/mobile/image-grid.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-grid.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>FROM UP</p><p>ABOVE VR</p></div>
+          <picture>
+            <source srcset="images/mobile/image-from-above.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-from-above.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>POCKET</p><p>BOREALIS</p></div>
+          <picture>
+            <source srcset="images/mobile/image-pocket-borealis.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-pocket-borealis.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>THE</p><p>CURIOSITY</p></div>
+          <picture>
+            <source srcset="images/mobile/image-curiosity.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-curiosity.jpg" />
+          </picture>
+        </div>
+        <div class="creation_image">
+          <div><p>MAKE IT</p><p>FISHEYE</p></div>
+          <picture>
+            <source srcset="images/mobile/image-fisheye.jpg" media="(max-width: 1049px)">
+            <img class="main_img" src="images/desktop/image-fisheye.jpg" />
+          </picture>
+        </div>
+      </div>
+
+      <div class="create_btn" > <button class="main_btn"> SEE ALL </button></div>
+    </div>
+
+  </div>
+
+  <footer>
+    <div class="nav_logo_footer">
+      <div class="logo_footer">
+        <img src="images/logo.svg" alt="logo" />
+      </div>
+      <div class="nav_footer">
+        <div>
+          <ul>
+            <li class="list_item"><a href="" style="text-decoration: none;">About</a></li>
+            <li class="list_item"><a href="" style="text-decoration: none;">Careers</a></li>
+            <li class="list_item"><a href="" style="text-decoration: none;">Events</a></li>
+            <li class="list_item"><a href="" style="text-decoration: none;">Products</a></li>
+            <li class="list_item"><a href="" style="text-decoration: none;">Support</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="social_media">
+      <div class="social_icons">
+        <ul class="social_list">
+          <li><a class="list_item" href=""><img src="images/icon-facebook.svg" alt="facebook" /></a></li>
+          <li><a class="list_item" href=""><img src="images/icon-twitter.svg" alt="twitter" /></a></li>
+          <li><a class="list_item" href=""><img src="images/icon-pinterest.svg" alt="pinterest" /></a></li>
+          <li><a class="list_item" href=""><img src="images/icon-instagram.svg" alt="instagramg" /></a></li>
+        </ul>
+      </div>
+      <div class="license"> &#169 2021 Loopstudios. All rights reserved.</div>
+    </div>
   </footer>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Emmanuel Gonzalez</a>.
   </div>
 </body>
-
+<script>
+  let show_list = true;
+  function make_X(x){
+    x.classList.toggle("change");
+    show = 'none';
+    if(show_list){
+      show = 'inherit';
+      show_list = false;
+      document.getElementsByClassName("nav")[0].style.backgroundColor = "black";
+    }
+    else{
+      show = 'none';
+      show_list = true;
+      document.getElementsByClassName("nav")[0].style.backgroundColor = "inherit";
+    }
+    document.getElementsByClassName("nav_list")[0].style.display = show;
+  }
+</script>
 <script src="index.js"></script>
 </html>
