--- a/index.html
+++ b/index.html
@@ -78,56 +78,56 @@
           <div><p>DEEP</p><p>EARTH</p></div>
           <picture>
             <source srcset="images/mobile/image-deep-earth.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-deep-earth.jpg" />
+            <img class="main_img" src="images/desktop/image-deep-earth.jpg" alt="earth" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>NIGHT</p><p>ARCADE</p></div>
           <picture>
             <source srcset="images/mobile/image-night-arcade.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-night-arcade.jpg" />
+            <img class="main_img" src="images/desktop/image-night-arcade.jpg" alt="arcade" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>SOCCER</p><p>TEAM VR</p></div>
           <picture>
             <source srcset="images/mobile/image-soccer-team.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-soccer-team.jpg" />
+            <img class="main_img" src="images/desktop/image-soccer-team.jpg" alt="soccer" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>THE</p><p>GRID</p></div>
           <picture>
             <source srcset="images/mobile/image-grid.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-grid.jpg" />
+            <img class="main_img" src="images/desktop/image-grid.jpg" alt="car" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>FROM UP</p><p>ABOVE VR</p></div>
           <picture>
             <source srcset="images/mobile/image-from-above.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-from-above.jpg" />
+            <img class="main_img" src="images/desktop/image-from-above.jpg" alt="road" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>POCKET</p><p>BOREALIS</p></div>
           <picture>
             <source srcset="images/mobile/image-pocket-borealis.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-pocket-borealis.jpg" />
+            <img class="main_img" src="images/desktop/image-pocket-borealis.jpg" alt="norther lights" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>THE</p><p>CURIOSITY</p></div>
           <picture>
             <source srcset="images/mobile/image-curiosity.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-curiosity.jpg" />
+            <img class="main_img" src="images/desktop/image-curiosity.jpg" alt="rover" />
           </picture>
         </div>
         <div class="creation_image">
           <div><p>MAKE IT</p><p>FISHEYE</p></div>
           <picture>
             <source srcset="images/mobile/image-fisheye.jpg" media="(max-width: 1049px)">
-            <img class="main_img" src="images/desktop/image-fisheye.jpg" />
+            <img class="main_img" src="images/desktop/image-fisheye.jpg" alt="fisheye" />
           </picture>
         </div>
       </div>
