--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="intro">
     <picture>
-      <source srcset="images/mobile/image-hero.jpg" media="(max-width:800px)">
+      <source srcset="images/mobile/image-hero.jpg" media="(max-width:800px) and (max-height: 800px)">
       <img class="hero_image_holder" src="images/desktop/image-hero.jpg" alt="hero" />
     </picture>
     <div class="nav">
